[project]
name = "yu-tcal"
version = "4.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
]
authors = [
    {name = "Hiroyuki Matsui", email = "h-matsui@yz.yamagata-u.ac.jp"},
    {name = "Koki Ozawa"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["organic semiconductor", "transfer integral", "interatomic transfer integral"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcal"]

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "furo>=2025.12.19",
    "sphinx>=7.4.7",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
docs-generate = "sphinx-apidoc -f -o docs-src/source src && sphinx-build -M clean docs-src/source docs && sphinx-build -b html docs-src/source docs && touch docs/.nojekyll"

[project.scripts]
tcal = "tcal.tcal:main"

[project.optional-dependencies]
pyscf = [
    "basis-set-exchange>=0.12",
    "pyscf>=2.12.1",
]
gpu4pyscf-cuda11 = [
    "basis-set-exchange>=0.12",
    "pyscf>=2.12.1",
    "cutensor-cu11>=2.2.0",
    "gpu4pyscf-cuda11x>=1.5.2",
]
gpu4pyscf-cuda12 = [
    "basis-set-exchange>=0.12",
    "pyscf>=2.12.1",
    "cutensor-cu12>=2.5.0",
    "gpu4pyscf-cuda12x>=1.5.2",
]

[tool.setuptools.packages.find]
where = ["src"]
